# berconpy

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pyright-lint.yml  python-publish.yml  python-test.yml  ruff-check.yml  ruff-format.yml
docs/: requirements.txt
docs/source/: BERConProtocol.txt  api.rst  asyncio.rst  changelog.rst  client.rst  conf.py  events.rst  index.rst  intro.rst  protocol.rst
docs/source/_static/: custom.css
docs/source/ext/: arma.rst
examples/: arma_repl.py  command.py  kick_survivor.py  kicksurvivor.py  listen.py  repl.py  server.py
src/berconpy/: __init__.py  _typed_event.py  ban.py  cache.py  client.py  dispatch.py  errors.py  events.py  io.py  old_protocol.py  packet.py  parser.py  player.py  protocol.py  server.py  utils.py
src/berconpy/asyncio/: __init__.py  ban.py  cache.py  client.py  dispatch.py  io.py  player.py
src/berconpy/client/: __init__.py  asyncio.py  cache.py  client.py  events.py  player.py
src/berconpy/client/asyncio/: __init__.py  ban.py  cache.py  client.py  dispatch.py
src/berconpy/ext/arma/: __init__.py  ban.py  cache.py  client.py  dispatch.py  io.py  parser.py  player.py
src/berconpy/protocol/: __init__.py  base.py  check.py  client.py  errors.py  events.py  packet.py  server.py
tests/: messages.py  models.py  test_protocol.py
tests/client/: __init__.py  test_cache.py
tests/protocol/: __init__.py  conftest.py  test_check.py  test_client.py  test_integration.py
