[build-system]
requires = ["uv-build~=0.9.21"]
build-backend = "uv_build"

[project]
name = "berconpy"
version = "3.1.1"
description = "An async wrapper for the BattlEye RCON protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "thegamecracks" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/berconpy"
"Documentation" = "https://berconpy.readthedocs.io/en/stable"
"Issue Tracker" = "https://github.com/thegamecracks/berconpy/issues"

[dependency-groups]
dev = ["pytest>=7.2.2", "coverage>=7.2.1", "typing-extensions>=4.5.0"]
docs = ["sphinx>=5.1.1", "sphinx-autodoc-typehints>=1.19.2"]

[tool.coverage.run]
branch = true
source_pkgs = ["berconpy"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
    "\\s*\\.\\.\\.$",
    "raise NotImplementedError",
    "def __repr__",
]
include_namespace_packages = true

[tool.mypy]
allow_redefinition = true

[tool.pyright]
include = ["src"]
# typeCheckingMode = "strict"
# reportImportCycles = "none"
# reportMissingParameterType = "none"
# reportMissingTypeArgument = "none"
# reportPrivateUsage = "none"
# reportUnknownArgumentType = "none"
# reportUnknownMemberType = "none"
# reportUnknownParameterType = "none"
# reportUnknownVariableType = "none"
# reportUnusedImport = "none"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = ["--import-mode=prepend"]
