[metadata]
name = berconpy
version = 0.1.0
description = An async wrapper for the BattlEye RCON protocol.
long_description = file: README.md
author = thegamecracks
url = https://github.com/thegamecracks/berconpy
license = MIT

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
