[metadata]
name = berconpy
version = attr: berconpy.__version__
description = An async wrapper for the BattlEye RCON protocol.
long_description = file: README.md
author = thegamecracks
url = https://github.com/thegamecracks/berconpy
license = MIT

[options]
python_requires = >=3.10
package_dir=
    =src
packages = find_namespace:

[options.packages.find]
where = src
